.metadata/.plugins/org.eclipse.cdt.ui/test005_CLCD.build.log
16:53:07 **** Incremental Build of configuration Debug for project test005_CLCD ****
make -j24 all 
arm-none-eabi-gcc "../Core/Src/lcd1602.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/lcd1602.d" -MT"Core/Src/lcd1602.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/lcd1602.o"
../Core/Src/lcd1602.c:8:8: error: unknown type name 'I2C_HandleTypeDef'
    8 | extern I2C_HandleTypeDef *hi2c;
      |        ^~~~~~~~~~~~~~~~~
../Core/Src/lcd1602.c: In function 'lcd_command':
../Core/Src/lcd1602.c:22:9: warning: implicit declaration of function 'HAL_I2C_Master_Transmit' [-Wimplicit-function-declaration]
   22 |         HAL_I2C_Master_Transmit(hi2c, I2C_ADDR, dd, 4, 10);
      |         ^~~~~~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/lcd1602.o] Error 1
"make -j24 all" terminated with exit code 2. Build might be incomplete.

16:53:07 Build Failed. 2 errors, 1 warnings. (took 127ms)

